...
                android:gravity="center"
                android:text="+7"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/userlist_call_EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="30sp" />

        </LinearLayout>


        <Button
            android:id="@+id/userlist_callToPhone_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userlist_callEdit_Layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:onClick="toPhone"
...
