...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.panarik.smartFeatures.activity.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"/>

...
