...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/editNameMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_centerVertical="true"
            android:hint="Название фильма"
            android:ems="10"
            android:inputType="textPersonName" />
        <Button
            android:id="@+id/searchMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/editNameMovie"
            android:text="Поиск!"
            android:focusable="true"
...
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videoWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background" />

        <ImageView
            android:id="@+id/videoLocal_backImageView"
...
