<resources>
    <string name="app_name">Smart Features</string>

    <string name="item_element_text">Superman Returns</string>
    <string name="freeGameActivity_tryAgainButton">Try Again :)</string>
    <string name="freeGameActivity_clickOnChest">Click on chest!</string>
    <string name="menu_options">MENU OPTIONS</string>

    <string name="TipsCalcActivity_cost_of_service">Cost of Service</string>
    <string name="TipsCalcActivity_how_was_the_service">How was the service?</string>
...
